prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - amp.corp.equinix.com
    secretName: ampcorp-secret-tls
  rules:
  #- host: amp.corp.equinix.com
  - http:
      paths:
        - path: /prometheus
          pathType: Prefix
          backend:
            service:
              name: prometheus-server
              port:
                number: 30009
